move the spacing between folder children from the parent to each child. That way we avoid the browser using a not-allowed cursor when dragging and moving from one child to another (since the space between is not a drop target)

--- a/src/popup/pages/node/FolderChild.module.css
+++ b/src/popup/pages/node/FolderChild.module.css
@@ -1,3 +1,7 @@
+.dropzone {
+  padding-block: var(--size-1);
+}
+
 .child {
   display: flex;
   justify-content: flex-start;
