--- a/src/popup/pages/node/FolderChildren.module.css
+++ b/src/popup/pages/node/FolderChildren.module.css
@@ -3,5 +3,4 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-  gap: var(--size-2);
 }
